Fix iPhone 5 horizontal scroll

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,14 +19,8 @@ $sizes: map-merge(
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-html {
-	width:100%;
-	height:100%;
-}
-
-body {
-	width:100%;
-	height:100%;
+html, body {
+	overflow-x: hidden;
 }
 
 .navbar {
